data/all_generated_tests/raw_wast_tests/loop_StackCorruption_359.wast
;; 10. **Test Loop with Simultaneous `br_if` and `br_table`**:    - Combine `br_if` and `br_table` instructions in a single loop to induce complex branching. Ensure the integrity of the operand stack throughout.    - **Constraint**: Correct handling and resolution of multiple branching instructions affecting the stack.    - **Relation to Stack Corruption**: Simultaneous complex branching can lead to stack inconsistencies or corruption if improperly managed.

(assert_invalid
  (module
    (func $complex-branch-loop
      (local i32)
      (loop $start (result i32)
        (i32.const 0)
        (br_table $start $start (i32.eq (local.get 0) (i32.const 0)))
        (i32.const 1)
        (br_if $start (i32.eqz (i32.const 1)))
      )
    )
  )
  "type mismatch"
)